simpler, correct link to repository

--- a/xml/XSLT/index.html
+++ b/xml/XSLT/index.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
-<!-- $Id: index.html,v 1.6 2005-10-18 04:09:12 jacobsen Exp $ -->
+<!-- $Id: index.html,v 1.7 2007-02-25 16:45:11 jacobsen Exp $ -->
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -43,7 +43,7 @@ Windows and Java .properties files containing some of the information are
 All of these files are created automatically from the JMRI
 decoder files using XSLT.  The toolkit to do this 
 is available from the JMRI distribution, or our
-<A HREF="http://cvs.sourceforge.net/viewcvs.py/jmri/xml/XSLT/">CVS repository</a>.
+<A HREF="http://jmri.cvs.sourceforge.net/jmri/xml/XSLT/">CVS repository</a>.
 <P>
 These pages are updated as people contribute decoder information to JMRI.
 <A HREF="../../community/index.html">Many people</a>
