--- a/help/en/index.html
+++ b/help/en/index.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd">
-<!-- $Id: index.html,v 1.1 2003-12-20 04:22:49 jacobsen Exp $ -->
+<!-- $Id: index.html,v 1.2 2007-03-18 22:05:56 jacobsen Exp $ -->
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -16,6 +16,15 @@ This is the top-level JMRI help page.
 The 
 <A HREF="Acknowledgements.html">acknowledgements page</a>
 shows that a lot of people have been able to contribute.
+
+<h2>Using The Help System</h2>
+
+The section to the left gives you three types of access to JMRI's help.
+<UL>
+<LI>The "book" icon shows a table of contents view
+<LI>The "tabbed" icon shows the index
+<LI>The "magnifying glass" icon lets you search the contents
+</UL>
 
 <h2>Further information</h2>
 
