--- a/help/en/package/jmri/jmrit/beantable/LogixTable.html
+++ b/help/en/package/jmri/jmrit/beantable/LogixTable.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: LogixTable.html,v 1.1 2007-03-18 22:05:09 jacobsen Exp $ -->
+<!-- $Id: LogixTable.html,v 1.2 2007-03-24 16:27:46 djduchamp Exp $ -->
 <html lang="en">
 <head>
  <TITLE>
@@ -21,9 +21,42 @@
 <body>
 <H2>The Logix Table
 </H2>
-    
-This is the help/jmri/jmrit/beantable/LogixTable help page
-
+	<p> A Logix is a small group of Conditionals focused on a single task 
+	on the layout. Each Conditional may be viewed as a statement of the form:
+	<ul>if (logical expression) then (action).</ul>
+	The "logical expression" part of a Conditional tests the state of a group
+	of user-specified conditions on the layout, for example, whether certain
+	turnouts are closed or thrown, or whether a block is occupied. The "action" 
+	part of the Conditional specifies what action is to be taken if the state of 
+	the logical expression changes.</p>
+	<p> The Logix Table lists all currently defined Logixs by their system name 
+	and user name. The last column of the table provides an easy way to edit a 
+	Logix and its Conditionals. Simply clicking the <b>Edit</b> button for a Logix, 
+	will bring up the Edit Logix window. The Edit Logix window also provides for 
+	deleting a Logix.</p>
+	<p>The <b>Enabled</b> column allows you to enable (checked) or disable 
+	(unchecked) a Logix. A Logix does not have a state as many JMRI entities do.  
+	A Logix does have the capability of being "enabled" or "disabled". When a Logix 
+	is not enabled, the logical expressions of its Conditionals are still evaluated,
+	but the actions specified in the Conditionals are not taken. When a Logix is 
+	enabled after having been disabled, its Conditionals are recalculated and 
+	appropriate actions taken.</p>  
+	<p>To create a new Logix, click the <b>Add</b> button at the bottom of the Logix 
+	Table.  This will bring up a Create Logix window.  Entering a system name
+	and a user name, then clicking <b>Create Logix</b>, will create the Logix, and 
+	bring up the Edit Logix window. Once a Logix is created, its system name cannot 
+	be changed. Its user name, however, may be changed in either the Logix Table or 
+	the Edit Logix window. A new user name may be any useful text, provided the new 
+	user name was not previously assigned to another Logix.</p>
+	<p>The <b>File</b> menu at the top of the Logix Table provides for printing this 
+	table and for storing the Logixs and their Conditionals in a layout 
+	configuration file.  Selecting either store option will bring up a dialog for
+	naming a configuration file for writing Logix information and all other 
+	configuration information (e.g., sensors, lights, turnouts, signal heads, 
+	routes etc.). If you are updating an existing file, simply click its name, and 
+	it will be copied into the name entry.</p>
+	<p>For more information, consult the Logix documentation on the JMRI web page 
+	http://jmri.sourceforge.net/ .</p>
 </body>
 </html>
 
