next round of improvements

--- a/help/en/package/jmri/jmrit/beantable/LightTable.html
+++ b/help/en/package/jmri/jmrit/beantable/LightTable.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: LightTable.html,v 1.2 2007-03-27 18:57:31 djduchamp Exp $ -->
+<!-- $Id: LightTable.html,v 1.3 2007-04-08 04:41:39 jacobsen Exp $ -->
 <html lang="en">
 <head>
  <TITLE>
@@ -83,8 +83,6 @@ Table (or other tables from the Tools menu), or select <b>Store Panel...</b>
 in the <b>Panel</b> menu. Note that the enabled/disabled state of each Light
 is not saved in the configuration file.  When Lights are loaded from a
 configuration file, they are all enabled.
-
-
 
 </body>
 </html>
