--- a/help/en/package/jmri/jmrit/beantable/SignalAddEdit.html
+++ b/help/en/package/jmri/jmrit/beantable/SignalAddEdit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: SignalAddEdit.html,v 1.2 2007-04-08 04:41:39 jacobsen Exp $ -->
+<!-- $Id: SignalAddEdit.html,v 1.3 2007-06-07 04:32:27 jacobsen Exp $ -->
 <html lang="en">
 <head>
  <TITLE>
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<H2>Adding/Editing Turnouts
+<H2>Adding/Editing Signals
 </H2>
     
 This is the package/jmri/jmrit/beantable/SignalAddEdit help page
