--- a/help/en/package/jmri/jmrit/beantable/SignalTable.html
+++ b/help/en/package/jmri/jmrit/beantable/SignalTable.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: SignalTable.html,v 1.2 2007-03-26 07:05:15 jacobsen Exp $ -->
+<!-- $Id: SignalTable.html,v 1.3 2007-06-07 04:32:58 jacobsen Exp $ -->
 <html lang="en">
 <head>
  <TITLE>
@@ -42,7 +42,9 @@ signal, and allows you to change it.  This property is used by e.g. CTC
 machine logic to say "Don't change this signal head from red, even if it 
 would be safe to do so, because I want to hold a train here".
 </UL>
-<P>To define a new signal, click on the "Add.." button.  It will
+<P>To define a new signal, click on the 
+"<A HREF="SignalAddEdit.html">Add.." button<a/>.
+It will
 prompt you for the type (run off turnout outputs; SE8c; etc), and
 whatever setup information is needed.
 <P> This information is saved with the configuration in an XML file, along
@@ -50,7 +52,7 @@ with control panel setup and similar stuff.  For more information
 on creating and displaying panels, including how to show signals
 on your panels,
 please see the 
-<A HREF="../PanelPro/Panels.html">Panels pages</a>.
+<A HREF="../apps/PanelPro/Panels.html">Panels pages</a>.
 
 </body>
 </html>
