--- a/jmri/configurexml/package.html
+++ b/jmri/configurexml/package.html
@@ -79,6 +79,16 @@ has no turnout manager instance to connect to yet.  The solution to
 this seems to be support for an "InstanceListener" in the InstanceManager so
 that objects can learn about the creation of new basic instances.
 
+<P>
+There are four levels of information, used to ensure
+that prerequisites are present during a load:
+<UL>
+<LI>Pref
+<LI>Config
+<LI>Tool
+<LI>User
+</UL>
+
 <h2>Related Documentation</h2>
 
 For overviews, tutorials, examples, guides, and tool documentation, please see:
