--- a/help/en/package/jmri/jmrit/display/EnterTrackWidth.html
+++ b/help/en/package/jmri/jmrit/display/EnterTrackWidth.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: EnterTrackWidth.html,v 1.1 2007-08-19 19:04:41 djduchamp Exp $ -->
+<!-- $Id: EnterTrackWidth.html,v 1.2 2007-09-18 13:56:37 djduchamp Exp $ -->
 <html lang="en">
 <head>
  <TITLE>
@@ -30,7 +30,7 @@ of connected Track Segments. All track initially defaults to <i>side track</i>.
 Specifying <i>mainline track</i> type for specific segments of track is an option 
 that you may or may not choose to take advantage of.</p>
 <p>
-Each type of track may be drawn using a different track width. Changing the width of a track
+Each type of track may be drawn using a different track width. Changing the width of a 
 track type changes the widths of all track of that type in the track diagram.</p>
 
 </body>
