Add Delayed Set Turnout action to Logix

--- a/help/en/package/jmri/jmrit/beantable/ConditionalAddEdit.html
+++ b/help/en/package/jmri/jmrit/beantable/ConditionalAddEdit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: ConditionalAddEdit.html,v 1.3 2007-04-11 00:53:04 djduchamp Exp $ -->
+<!-- $Id: ConditionalAddEdit.html,v 1.4 2007-09-19 13:33:10 djduchamp Exp $ -->
 <html lang="en">
 <head>
  <TITLE>
@@ -254,6 +254,12 @@
 		Click <b>Set</b> to bring up a file selection dialog for finding the
 		file. Navigate to your script file, then click your script file's name 
 		in the dialog to copy it (including its path) to the field.
+		<li><b>Delayed Set Turnout</b>: Sets the specified turnout to the chosen 
+		state after waiting for a specified number of seconds.  Specify the 
+		turnout to set by entering its name. Specify the state to set by 
+		choosing Closed or Thrown in the popup menu. Specify the number of
+		seconds to delay before setting the turnout by entering a number in 
+		the right-most field.
 		</ul>
 	</p>	
 </body>
